<resources>
    <string name="app_name">Kiki Storage</string>
    <string name="bin">Bin</string>
    <string name="starred">Starred</string>
    <string name="drive">Drive</string>
    <string name="set_location">Set location…</string>
    <string name="exit">exit</string>
    <string name="really_exit_the_application">Really exit the application?</string>
    <string name="cancel">Cancel</string>
    <string name="app_logo">App logo</string>
    <string name="home">Home</string>
    <string name="account">Account</string>
    <string name="sign_out">Sign out</string>
    <string name="item_icon">Item icon</string>
    <string name="this_location_is_empty">This location is empty.</string>
    <string name="add_new_item">Add new item</string>
    <string name="folder">Folder</string>
    <string name="upload">Upload</string>
    <string name="photo">Photo</string>
    <string name="enter_new_folder_name">Enter new folder name…</string>
    <string name="add">Add</string>
    <string name="add_folder">Add Folder</string>
    <string name="there_was_an_error_signing_in">There was an error signing in</string>
    <string name="move_to_bin">Move to bin</string>
    <string name="add_to_starred">Add to starred</string>
    <string name="download">Download</string>
    <string name="size">Size:</string>
    <string name="date_added">Date added:</string>
    <string name="date_modified">Date modified:</string>
    <string name="type">Type:</string>
    <string name="name">Name:</string>
    <string name="delete_permanently">Delete Permanently</string>
    <string name="this_action_cannot_be_undone">This action cannot be undone.</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="downloaded_to">Downloaded to %1$s</string>
    <string name="download_failed">Download failed: %1$s</string>
    <string name="download_started">Download started</string>
    <string name="remove_from_starred">Remove from starred</string>
    <string name="a_name_can_t_contain_any_of_the_following_characters">A name can\'t contain any of the following characters: %1$s</string>
    <string name="upload_complete_files">Upload complete (%1$d file(s) - %2$s)</string>
    <string name="upload_failed">Upload failed</string>
    <string name="upload_started">Upload started</string>
    <string name="navigate_button">Back button</string>
    <string name="move_to">Move to…</string>
    <string name="rename">Rename…</string>
    <string name="renaming">Renaming \"%1$s\"</string>
    <string name="enter_new_name">Enter new name…</string>
    <string name="confirm">Confirm</string>
    <string name="enter_new_path">Enter new path</string>
    <string name="moving">Moving \"%1$s\"</string>
    <string name="move_complete">Move complete</string>
    <string name="delete_complete">Delete complete</string>
    <string name="destination_does_not_exist">Destination does not exist</string>
    <string name="rename_complete">Rename complete</string>
    <string name="copy_path">Copy path</string>
    <string name="email">Email: %1$s</string>
    <string name="sign_in_methods">Sign-in methods: %1$s</string>
    <string name="last_sign_in">Last sign-in: %1$s</string>
    <string name="sign_up">Sign-up: %1$s</string>
    <string name="total_storage">Total storage: %1$s / ∞</string>
    <string name="not_signed_in">Not signed in</string>
    <string name="signed_in_as">Signed in as %1$s</string>
    <string name="chat_with_gemini">Chat with Gemini</string>
    <string name="ask_gemini_anything">Ask Gemini anything…</string>
    <string name="send_message">Send message</string>
    <string name="attach_file">Attach file</string>
    <string name="you">You</string>
    <string name="profile_picture">Profile picture</string>
    <string name="thinking">(Thinking…)</string>
    <string name="image_attached">Image attached</string>
    <string name="file_s_attached">File(s) attached</string>
    <string name="file_not_supported_or_is_over_20mb_supported_input_files_include_images_pdfs_video_and_audio">File not supported or is over 20MB. Supported input files include images, PDFs, video, and audio.</string>
    <string name="error">Error</string>
    <string name="delete_account">Delete account</string>
    <string name="deleting_account">Deleting account…</string>
    <string name="copied_to_clipboard">%1$s copied to clipboard</string>
    <string name="account_deleted">Account %1$s deleted.</string>
    <string name="you_must_reauthenticate_before_deleting_your_account">"You must reauthenticate before deleting your account. "</string>
</resources>