<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".fragment.dialog.ItemOptionsDialogFragment">

    <ImageView
        android:id="@+id/itemIcon"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|top"
        android:background="@drawable/circle_background"
        android:contentDescription="@string/item_icon"
        android:elevation="5dp"
        android:padding="20dp"
        android:src="@drawable/logo" />

    <LinearLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="30dp"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/name" />

        <TextView
            android:id="@+id/itemName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="Example" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/type" />

        <TextView
            android:id="@+id/itemType"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="EXE" />

        <TextView
            android:id="@+id/itemSizeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/size" />

        <TextView
            android:id="@+id/itemSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="50kb" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_added" />

        <TextView
            android:id="@+id/itemDateAdded"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="23.06.2024 19:29" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/date_modified" />

        <TextView
            android:id="@+id/itemDateModified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            tools:text="23.06.2024 19:29" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/gray" />

        <Button
            android:id="@+id/downloadButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/baseline_file_download_24"
            android:drawableTint="@color/white"
            android:gravity="start|center_vertical"
            android:text="@string/download" />

        <Button
            android:id="@+id/starButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/outline_star_border_24"
            android:drawableTint="@color/white"
            android:gravity="start|center_vertical"
            android:text="@string/add_to_starred" />

        <Button
            android:id="@+id/deleteButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@drawable/outline_delete_24"
            android:drawableTint="@color/white"
            android:gravity="start|center_vertical"
            android:text="@string/move_to_bin" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
