<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.GeminiFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:paddingHorizontal="10dp">

        <ImageButton
            android:id="@+id/addMessageImageView"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"

            android:contentDescription="@string/attach_file"
            android:src="@drawable/baseline_attach_file_24" />

        <EditText
            android:id="@+id/messageEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:layout_weight="1"
            android:autofillHints="@string/ask_gemini_anything"
            android:background="@drawable/chat_text_shadow"
            android:hint="@string/ask_gemini_anything"
            android:inputType="textMultiLine"
            android:padding="10dp" />

        <ImageButton
            android:id="@+id/sendButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/send_message"
            android:src="@drawable/baseline_arrow_circle_up_24" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvItems"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/linearLayout"
        android:background="@android:color/white"
        android:paddingHorizontal="16dp" />
</RelativeLayout>
