<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:baselineAligned="false"
    android:gravity="center"
    android:orientation="horizontal"
    android:padding="26dp"
    tools:context=".fragment.dialog.AddItemDialogFragment">

    <LinearLayout
        android:id="@+id/addFolderLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFolder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/folder"
            android:src="@drawable/baseline_create_new_folder_24"
            app:backgroundTint="@color/purple"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/folder"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/upload"
            android:src="@drawable/baseline_file_upload_24"
            app:backgroundTint="@color/purple"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/upload"
            android:textAlignment="center" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/photo"
            android:src="@drawable/baseline_add_a_photo_24"
            app:backgroundTint="@color/purple"
            app:tint="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/photo"
            android:textAlignment="center" />
    </LinearLayout>

</LinearLayout>
